--- a/mandelbulber2/formula/ui/pseudo_kleinian.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian.ui
@@ -1835,7 +1835,7 @@ offset</string>
 &lt;a href=&quot;Fragmentarium-Source/Examples/Knighty%20Collection/PseudoKleinian.frag&quot;&gt;Fragmentarium-Source/Examples/Knighty%20Collection/PseudoKleinian.frag&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;EXR example.fract&lt;br&gt;monte carlo DOF 002.fract&lt;br&gt;monte carlo DOF 003.fract&lt;br&gt;monte carlo DOF 004.fract&lt;br&gt;pseudo kleinian 001.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;EXR example.fract&lt;br&gt;benchmark-GPU 2.fract&lt;br&gt;monte carlo DOF 002.fract&lt;br&gt;monte carlo DOF 003.fract&lt;br&gt;monte carlo DOF 004.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
