--- a/mandelbulber2/formula/ui/transf_scale3d.ui
+++ b/mandelbulber2/formula/ui/transf_scale3d.ui
@@ -284,7 +284,7 @@
         <property name="text">
          <string notr="true">&lt;p&gt;scale 3d. Scale each axis individually&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/pine-Bulb.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;benchmark-GPU 2.fract&lt;br&gt;Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/pine-Bulb.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
