--- a/mandelbulber2/formula/ui/transf_sin_add.ui
+++ b/mandelbulber2/formula/ui/transf_sin_add.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
+ <class>transf_sin_add</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -82,8 +82,7 @@
      <item row="0" column="1">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>function order of v vector 
- (v1, v2, v3)</string>
+        <string>function order of v vector (v1, v2, v3)</string>
        </property>
       </widget>
      </item>
