--- a/mandelbulber2/formula/ui/transf_poly_fold_atan2_iter.ui
+++ b/mandelbulber2/formula/ui/transf_poly_fold_atan2_iter.ui
@@ -556,7 +556,7 @@
 &lt;tr&gt;&lt;th&gt;Reference&lt;/th&gt;&lt;td&gt;&lt;a href=&quot;https://fractalforums.org/fragmentarium/17/polyfoldsym-pre-transform/2684&quot;&gt;https://fractalforums.org/fragmentarium/17/polyfoldsym-pre-transform/2684&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_PolyfoldAtan2Iter_sierp.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
